--- a/META.yml
+++ b/META.yml
@@ -18,10 +18,8 @@ no_index:
   directory:
     - inc
     - t
+    - xt
 requires:
-  CPAN: Memoize
-  Module::CoreList: Term::ANSIColor::Print
-  Test::Kwalitee: 0
-  Test::More: Test::Script
-  Test::Pod: Test::Pod::Coverage
-version: 0.00_05
+  CPAN: Module::CoreList
+  Term::ANSIColor::Print: 0
+version: 0.00_06
