--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,13 @@ abstract: 'Determines if a module is Dual-Lived'
 author:
   - 'Kevin W. Henwood <Khen1950fx@aol.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
-license: Perl
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -20,6 +21,7 @@ no_index:
     - t
     - xt
 requires:
-  CPAN: Module::CoreList
+  CPAN: 0
+  Module::CoreList: 0
   Term::ANSIColor::Print: 0
-version: 0.00_10
+version: 0.01
