--- a/META.yml
+++ b/META.yml
@@ -8,8 +8,8 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
-license: unknown
+generated_by: 'Module::Install version 1.08'
+license: 'perl_5'
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -19,9 +19,9 @@ no_index:
   directory:
     - inc
     - t
-    - xt
 requires:
   CPAN: 0
+  Getopt::Long: 0
   Module::CoreList: 0
   Term::ANSIColor::Print: 0
-version: 0.01
+version: '0.02'
